--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI Pipeline - Backend
 
 on:
   push:
@@ -10,42 +10,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      - name: Install backend dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
-      - name: Run backend tests
+      - name: Run tests
         run: |
           cd backend
           python -m unittest discover -s . -p "test_app.py"
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install frontend dependencies
+      - name: Build Docker image
         run: |
-          cd frontend
-          npm install
-
-      - name: Run frontend tests
-        run: |
-          cd frontend
-          npm test
-
-      - name: Build Docker images
-        run: |
-          docker-compose build
+          docker build -t roroyero/monbackend:latest backend
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -53,7 +37,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker images
+      - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/monbackend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/monfrontend:latest
+          docker push roroyero/monbackend:latest
+
