--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,55 @@
-name: CI Pipeline - Backend
+name: CI Pipeline
 
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: 🛎️ Checkout du code
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
+      - name: 🐳 Installation de Docker Compose
         run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      
-      - name: Build Docker image
+      - name: 🏗️ Construire les images Docker
+        run: docker-compose build
+
+      - name: 🚀 Démarrer les services (PostgreSQL, Backend)
+        run: docker-compose up -d postgres backend
+
+      - name: ⏳ Attendre que PostgreSQL démarre
+        run: sleep 10
+
+      - name: ✅ Tester le backend
+        run: docker-compose run --rm backend pytest test_app.py
+
+      - name: 🧹 Nettoyage des conteneurs
+        run: docker-compose down
+
+      - name: 📝 Lister les images Docker disponibles
+        run: docker images
+        
+      - name: 📦 Connexion à Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: 📤 Push des images Docker
         run: |
-          docker build -t roroyero/monbackend:latest backend
+          # Tagger l'image backend avec ton nom d'utilisateur Docker Hub et le repository
+          docker tag projet_final_devops_backend:latest ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          # Tagger l'image frontend avec ton nom d'utilisateur Docker Hub et le repository
+          docker tag projet_final_devops_frontend:latest ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
-      - name: Push Docker image
-        run: |
-          docker push roroyero/monbackend:latest
-
+          # Pousser les images vers Docker Hub
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
