--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ${{ secrets.DOCKER_USERNAME }}/backend:latest
+        image: roroyero/monbackend:latest
         ports:
         - containerPort: 5000
         env:
