--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+        image: roroyero/monfrontend:latest
         ports:
         - containerPort: 80
 ---
