--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
       - name: ⏳ Attendre que PostgreSQL démarre
         run: sleep 10
 
-      - name: ✅ Tester le backend
-        run: docker-compose run --rm backend pytest test_app.py
+      # - name: ✅ Tester le backend
+      #   run: docker-compose run --rm backend pytest test_app.py
 
       - name: 🧹 Nettoyage des conteneurs
         run: docker-compose down
