--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,51 +5,51 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 🛎️ Checkout du code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🐳 Installation de Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-      - name: 🏗️ Construire les images Docker
-        run: docker-compose build
-
-      - name: Install dependencies
+      - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
       
-      # - name: ✅ Tester le backend
-      #   run: docker-compose run --rm backend pytest test_app.py
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: 🧹 Nettoyage des conteneurs
-        run: docker-compose down
-
-      - name: 📝 Lister les images Docker disponibles
-        run: docker images
-        
-      - name: 📦 Connexion à Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: 📤 Push des images Docker
+      - name: Install frontend dependencies
         run: |
-          # Tagger l'image backend avec ton nom d'utilisateur Docker Hub et le repository
-          docker tag projet_final_devops_backend:latest ${{ secrets.DOCKER_USERNAME }}/backend:latest
+          cd frontend
+          npm install
 
-          # Tagger l'image frontend avec ton nom d'utilisateur Docker Hub et le repository
-          docker tag projet_final_devops_frontend:latest ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+      - name: Run frontend tests
+        run: |
+          cd frontend
+          npm test
 
-          # Pousser les images vers Docker Hub
-          docker push ${{ secrets.DOCKER_USERNAME }}/backend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+      - name: Build Docker images
+        run: |
+          docker-compose build
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker images
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/monbackend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/monfrontend:latest
