--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -1,9 +1,21 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+spec:
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: backend
@@ -13,23 +25,10 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: roroyero/monbackend:latest
-        ports:
-        - containerPort: 5000
-        env:
-        - name: DATABASE_URL
-          value: "postgresql://postgres:password@postgres:5432/mydatabase"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend
-spec:
-  selector:
-    app: backend
-  ports:
-  - protocol: TCP
-    port: 5000
-    targetPort: 5000
-  type: ClusterIP
+        - name: backend
+          image: roroyero/backend:latest
+          env:
+            - name: DATABASE_URL
+              value: "postgres://user:password@postgres:5432/mydatabase"
+          ports:
+            - containerPort: 5000
