--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -1,15 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend
-spec:
-  selector:
-    app: backend
-  ports:
-    - protocol: TCP
-      port: 5000
-      targetPort: 5000
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,27 +14,22 @@ spec:
     spec:
       containers:
         - name: backend
-          image: roroyero/backend:latest
-          env:
-            - name: DATABASE_URL
-              value: "postgres-deployement://roroyero:password@postgres-service:5432/database_name"
-            - name: POSTGRES_USER
-              value: "roroyero"
-            - name: POSTGRES_PASSWORD
-              value: "password"
-            - name: POSTGRES_DB
-              value: "database_name"
+          image: roroyero/backend:latest 
           ports:
             - containerPort: 5000
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 5000
-            initialDelaySeconds: 15
-            periodSeconds: 20
-          readinessProbe:
-            httpGet:
-              path: /healthz
-              port: 5000
-            initialDelaySeconds: 5
-            periodSeconds: 10
+          env:
+            - name: DATABASE_URL
+              value: "postgresql://admin:password@postgres-service:5432/mydatabase"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+spec:
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+  type: ClusterIP
