--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -14,16 +14,23 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:latest
-          ports:
-            - containerPort: 5432
+          image: roro-yero/postgres:latest
           env:
             - name: POSTGRES_USER
-              value: "roroyero"
+              value: "admin"
             - name: POSTGRES_PASSWORD
               value: "password"
             - name: POSTGRES_DB
-              value: "database_name"
+              value: "mydatabase"
+          ports:
+            - containerPort: 5432
+          volumeMounts:
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
+      volumes:
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
